...
  }

  @override
  Widget build(BuildContext context) {
    final RatesState state = ref.watch(ratesProvider);
    return Scaffold(
      key: const ValueKey('ratesScreen'),
      appBar: AppBar(
        title: Text('Rates', style: AppTextStyles().bodyMedium),
        centerTitle: true,
        leading:
            state.isUpdating
                ? const CupertinoActivityIndicator()
...
                ? Center(
                  child: Text('Error: ${state.error?.type.name ?? 'Unknown error'}', style: AppTextStyles().bodyMedium),
                )
                : RefreshIndicator.adaptive(
                  onRefresh: onRefresh,
                  child: ListView.separated(
                    key: const ValueKey('ratesList'),
                    separatorBuilder: (_, _) => const Divider(height: 1),
                    itemCount: state.ratesCrypto?.length ?? 0,
                    padding: const EdgeInsets.symmetric(horizontal: AppSizes.size4x),
                    itemBuilder:
                        (BuildContext context, int index) => ListTile(
                          title: Text(
...
